Fix broken layout in reservation widget

--- a/src/pages/book-a-flight.scss
+++ b/src/pages/book-a-flight.scss
@@ -152,7 +152,7 @@
       }
     }
 
-    form.personal-details {
+    form#personal-details {
       margin-top: 30px;
 
       button {
